--- a/作业1.html
+++ b/作业1.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>首页</title>
 	<link rel="stylesheet" href="https://raw.githack.com/Caesar714/nc/master/css/layui.css">
 	<link rel="stylesheet" href="https://raw.githack.com/Caesar714/nc/master/111.css">
